# uberlogger-esp32

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  build.sh  convert_raw.py  gdbinit  log.txt  partitions_example.csv  readme.md  sdkconfig  sdkconfig.old  uberlogger-prog.bat  update_version.py
.github/workflows/: ci.yml
components/fileman/: CMakeLists.txt  fileman.c  fileman.h
components/sd_card/: CMakeLists.txt  esp_sd_card.c  esp_sd_card.h
components/spiffs_settings/: CMakeLists.txt  spiffs_settings.c  spiffs_settings.h
components/sysinfo/: CMakeLists.txt  sysinfo.c
docs/superpowers/plans/: 2026-06-04-hide-hotspot-ssid.md
docs/superpowers/specs/: 2026-06-04-hide-hotspot-ssid-design.md
front/: .eslintcache  DefaultConfig.json  dev_server.py  package-lock.json  package.json
front/src/: App.tsx  Dashboard.tsx
front/www/: config.html  convert_raw.py  convert_raw.spec  index.html  liveview.html  overview.html  view.css
front/www/ajax/: .htaccess  getConfig.json  getDefaultConfig.json  getFileList.json  getStatus.json  getValues.json  saveConfig  setConfig  setConfig.json  setTime
front/www/html/: config.html  fwupdate.html  home.html  liveview.html  log.html  overview.html
front/www/js/: config.js  config2.js  fwupdate.js  generic.js  liveview.js  log.js  overview.js
main/: CMakeLists.txt  CMakeLists.txt.bak  Kconfig.projbuild  common.h  config.h  console.c  ctimer.c  ctimer.h  errorcodes.h  esp_rest_main.c  esp_sd_card.c  esp_sd_card.h  extimer.h  file_server.c  file_server.h  fileman.c  fileman.h  firmware-www.c  firmware-www.h  firmwareESP32.c  firmwareESP32.h  firmwareSTM32.c  firmwareSTM32.h  firmwareWWW.c  fixedptc.h  hmi.c  hw_config.h  iirfilter.c  iirfilter.h  logger.c  logger.h  main.c  rest_server.c  rest_server.h  settings.c  settings.h  spi_control.c  spi_control.h  sysinfo.c  sysinfo.h  (+6 more)
production-tools/: calib_uber.py  qr-code-gen.py  qr-code-printnode.py  test.py  uberlogger-prog.bat
production-tools/fat/: config.py  config_params.py  fat_test.py  fat_utils.py  file_operations.py  main.py  validation.py  webserver_test.py
