idf_component_register(SRCS 
                            "console.c"
                            "hmi.c"                            
                            "logger.c"
                            "main.c"
                            "rest_server.c"
                            
                    INCLUDE_DIRS "")
